--- a/bin/gui/ListaDeDepartamento.fxml
+++ b/bin/gui/ListaDeDepartamento.fxml
@@ -26,7 +26,7 @@
       </ToolBar>
       <TableView fx:id="tableViewDepartamento" prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn fx:id="tableComumnId" prefWidth="75.0" text="Id" />
+          <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="Id" />
           <TableColumn fx:id="tableColumnNome" prefWidth="75.0" text="Nome" />
         </columns>
       </TableView>
