--- a/src/gui/DepartamentoFormulario.fxml
+++ b/src/gui/DepartamentoFormulario.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane prefHeight="197.0" prefWidth="671.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1">
+<AnchorPane prefHeight="184.0" prefWidth="588.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.DepartamentoController">
    <children>
       <GridPane layoutX="31.0" layoutY="30.0" prefHeight="149.0" prefWidth="538.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="30.0">
         <columnConstraints>
@@ -27,17 +26,17 @@
          <children>
             <Label text="Id" />
             <Label text="Nome" GridPane.rowIndex="1" />
-            <TextField editable="false" GridPane.columnIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label textFill="#f81919" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <TextField fx:id="txtID" editable="false" GridPane.columnIndex="1" />
+            <TextField fx:id="txtNome" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="labelNomeErro" textFill="#f81919" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <padding>
                   <Insets left="15.0" />
                </padding>
             </Label>
             <HBox prefHeight="49.0" prefWidth="333.0" spacing="70.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <Button mnemonicParsing="false" text="Salvar" />
-                  <Button mnemonicParsing="false" text="Cancelar" />
+                  <Button fx:id="btSalvar" mnemonicParsing="false" onAction="#onBtSaveAction" text="Salvar" />
+                  <Button fx:id="btCancelar" mnemonicParsing="false" onAction="#onBtCancelarAction" text="Cancelar" />
                </children>
                <padding>
                   <Insets top="15.0" />
