--- a/src/gui/VendedorFormulario.fxml
+++ b/src/gui/VendedorFormulario.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,17 +11,20 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="202.0" prefWidth="618.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.VendedorController">
+<AnchorPane prefHeight="377.0" prefWidth="618.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.VendedorController">
    <children>
-      <GridPane layoutX="31.0" layoutY="30.0" prefHeight="149.0" prefWidth="538.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="30.0">
+      <GridPane layoutX="31.0" layoutY="30.0" prefHeight="250.0" prefWidth="538.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="30.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="169.0" minWidth="10.0" prefWidth="54.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="169.0" minWidth="10.0" prefWidth="110.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="342.0" minWidth="10.0" prefWidth="273.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="211.0" minWidth="10.0" prefWidth="211.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="211.0" minWidth="10.0" prefWidth="155.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -33,7 +37,7 @@
                   <Insets left="15.0" />
                </padding>
             </Label>
-            <HBox prefHeight="49.0" prefWidth="333.0" spacing="70.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <HBox prefHeight="23.0" prefWidth="273.0" spacing="70.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
                   <Button fx:id="btSalvar" mnemonicParsing="false" onAction="#onBtSaveAction" text="Salvar" />
                   <Button fx:id="btCancelar" mnemonicParsing="false" onAction="#onBtCancelarAction" text="Cancelar" />
@@ -42,6 +46,15 @@
                   <Insets top="15.0" />
                </padding>
             </HBox>
+            <Label text="Email" GridPane.rowIndex="2" />
+            <Label text="Data de nascimento" GridPane.rowIndex="3" />
+            <Label text="Salário base" GridPane.rowIndex="4" />
+            <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtSalarioBase" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <DatePicker fx:id="dpNascimento" prefHeight="25.0" prefWidth="263.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label fx:id="labelEmailErro" textFill="#d30b0b" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Label fx:id="labelNascimentoErro" textFill="#e10e0e" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Label fx:id="labelSalarioBaseErro" textFill="#d71010" GridPane.columnIndex="2" GridPane.rowIndex="4" />
          </children>
       </GridPane>
    </children>
