--- a/src/gui/VendedorFormulario.fxml
+++ b/src/gui/VendedorFormulario.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -25,6 +26,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -37,7 +39,7 @@
                   <Insets left="15.0" />
                </padding>
             </Label>
-            <HBox prefHeight="23.0" prefWidth="273.0" spacing="70.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <HBox prefHeight="23.0" prefWidth="273.0" spacing="70.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <children>
                   <Button fx:id="btSalvar" mnemonicParsing="false" onAction="#onBtSaveAction" text="Salvar" />
                   <Button fx:id="btCancelar" mnemonicParsing="false" onAction="#onBtCancelarAction" text="Cancelar" />
@@ -51,10 +53,12 @@
             <Label text="Salário base" GridPane.rowIndex="4" />
             <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="txtSalarioBase" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <DatePicker fx:id="dpNascimento" prefHeight="25.0" prefWidth="263.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <DatePicker fx:id="dpNascimento" prefHeight="25.0" prefWidth="264.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label fx:id="labelEmailErro" textFill="#d30b0b" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <Label fx:id="labelNascimentoErro" textFill="#e10e0e" GridPane.columnIndex="2" GridPane.rowIndex="3" />
             <Label fx:id="labelSalarioBaseErro" textFill="#d71010" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <Label text="Departamento" GridPane.rowIndex="5" />
+            <ComboBox fx:id="comboBoxDepartamento" prefHeight="25.0" prefWidth="263.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
    </children>
